exports[`test should return po object with custom localeMapper 1`] = `
Object {
  "zh-CN": Object {
    "": undefined,
    "( default )": "（默认值）",
  },
  "zh-TW": Object {
    "": undefined,
    "( default )": "（默認值）",
  },
}
`;

exports[`test should return po object with default localeMapper 1`] = `
Object {
  "zh-CN": Object {
    "": undefined,
    "Creator": "建立者（簡中）",
    "Version": "版本（簡中）",
  },
  "zh-TW": Object {
    "": undefined,
    "Creator": "建立者",
    "Version": "版本",
  },
}
`;
